--- a/DoitServer/Info.plist
+++ b/DoitServer/Info.plist
@@ -30,6 +30,8 @@
 			<string></string>
 		</dict>
 	</dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app requires access to the photo library.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
